// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards, Buttons Check Button 1`] = `
Object {
  "button": Object {
    "background-color": "",
    "background-color-global": true,
    "background-palette-color": 4,
    "background-palette-opacity": 1,
    "background-palette-status": true,
    "border-color": "",
    "border-color-global": true,
    "border-palette-color": 5,
    "border-palette-opacity": 1,
    "border-palette-status": true,
    "bottom-gap-g": 20,
    "bottom-gap-unit-g": "px",
    "color": "",
    "color-global": true,
    "font-family-g": "Roboto",
    "font-size-g": 20,
    "font-size-unit-g": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 20,
    "font-size-xxl": 20,
    "font-style-g": "italic",
    "font-weight-g": "300",
    "hover-background-color": "",
    "hover-background-color-all": false,
    "hover-background-color-global": true,
    "hover-background-palette-color": 6,
    "hover-background-palette-opacity": 1,
    "hover-background-palette-status": true,
    "hover-border-color": "",
    "hover-border-color-all": false,
    "hover-border-color-global": true,
    "hover-border-palette-color": 6,
    "hover-border-palette-opacity": 1,
    "hover-border-palette-status": true,
    "hover-color": "",
    "hover-color-all": false,
    "hover-color-global": true,
    "hover-palette-color": 5,
    "hover-palette-opacity": 1,
    "hover-palette-status": true,
    "letter-spacing-g": 5,
    "letter-spacing-unit-g": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 5,
    "letter-spacing-xxl": 0,
    "line-height-g": 10,
    "line-height-unit-g": "%",
    "line-height-unit-xl": "%",
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-g": "overline",
    "text-direction-g": "ltr",
    "text-indent-g": 44,
    "text-indent-unit-g": "px",
    "text-orientation-g": "unset",
    "text-transform-g": "capitalize",
    "white-space-g": "pre",
    "word-spacing-g": 10,
    "word-spacing-unit-g": "px",
  },
}
`;

exports[`StyleCards, Buttons Should work on responsive 1`] = `
Object {
  "button": Object {
    "background-color": "",
    "background-color-global": true,
    "background-palette-color": 4,
    "background-palette-opacity": 1,
    "background-palette-status": true,
    "border-color": "",
    "border-color-global": true,
    "border-palette-color": 5,
    "border-palette-opacity": 1,
    "border-palette-status": true,
    "bottom-gap-g": 20,
    "bottom-gap-m": 10,
    "bottom-gap-unit-g": "px",
    "color": "",
    "color-global": true,
    "font-family-g": "Roboto",
    "font-family-m": "Roboto",
    "font-size-g": 20,
    "font-size-m": 10,
    "font-size-unit-g": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 20,
    "font-size-xxl": 20,
    "font-style-g": "italic",
    "font-style-m": "oblique",
    "font-weight-g": "300",
    "font-weight-m": "400",
    "hover-background-color": "",
    "hover-background-color-all": false,
    "hover-background-color-global": true,
    "hover-background-palette-color": 6,
    "hover-background-palette-opacity": 1,
    "hover-background-palette-status": true,
    "hover-border-color": "",
    "hover-border-color-all": false,
    "hover-border-color-global": true,
    "hover-border-palette-color": 6,
    "hover-border-palette-opacity": 1,
    "hover-border-palette-status": true,
    "hover-color": "",
    "hover-color-all": false,
    "hover-color-global": true,
    "hover-palette-color": 5,
    "hover-palette-opacity": 1,
    "hover-palette-status": true,
    "letter-spacing-g": 5,
    "letter-spacing-m": 15,
    "letter-spacing-unit-g": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 5,
    "letter-spacing-xxl": 0,
    "line-height-g": 10,
    "line-height-m": 20,
    "line-height-unit-g": "%",
    "line-height-unit-xl": "%",
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-g": "overline",
    "text-decoration-m": "underline",
    "text-direction-g": "ltr",
    "text-indent-g": 44,
    "text-indent-m": 22,
    "text-indent-unit-g": "px",
    "text-orientation-g": "unset",
    "text-transform-g": "capitalize",
    "text-transform-m": "uppercase",
    "white-space-g": "pre",
    "white-space-m": "pre-wrap",
    "word-spacing-g": 10,
    "word-spacing-m": 20,
    "word-spacing-unit-g": "px",
  },
}
`;
